:bug: Fixed overflow bug

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -192,7 +192,6 @@ body {
         }
     }
     .champion_list {
-        overflow: inherit !important;
         .spinner {
             text-align: center;
             font-size: 50px;
